# GoogleTest_Cmake

./: CMakeLists.txt  Jenkins  README.md  build_.bat  build_project.bat  pipeline.sh
src/: Example.cpp  Example.hpp  mirror_control.cpp  mirror_selection.cpp
test/: CMakeLists.txt  CTestTestfile.cmake  ExampleTests.cpp  Makefile  cmake_install.cmake
